데이터 타입과 연산자 예습

--- a/20191001-2.md
+++ b/20191001-2.md
@@ -42,6 +42,7 @@
 - 할당(assignment 대입, 저장) : 변수에 값을 저장하는 것
 - 참조(reference) : 변수에 저장된 값을 읽어들이는 것
 - 변수 이름은 사람을 위해 저장된 메모리 공간에 붙인 이름
+  
   - 변수 이름을 통해 컴퓨터에게 참조를 요청하면 컴퓨터는 변수 이름과 매핑된 메모리 주소를 통해 메모리 공간에 접근하여 저장된 값을 반환함
 
 ```javascript
@@ -79,7 +80,7 @@ result
 ### 3. 변수 선언
 
 - 변수 선언(Variable declaration) : 변수를 생성하는 것
-  - 변수 이름을 자바스크립트 엔진에 알려 등록하고 변수값을 저장하기 이ㅜ한 메모리 영역의 확보를 명령하는 것
+  - 변수 이름을 자바스크립트 엔진에 알려 등록하고 변수값을 저장하기 위한 메모리 영역의 확보를 명령하는 것
   - 변수 선언을 통해 자바스크립트 엔진은 등록된 변수 이름과 변수값을 저장하기 위한 메모리 영역을 연결하여 변수를 지속적으로 관리
 - 변수를 사용하려면 반드시 선언이 필요
   - 변수를 선언할 때는 var, let, const키워드를 사용
